Minor Tweaks on some small issues
Fixed search bar and basket image.
Less clutter on the navigation
Created new buttons for the accounts and wishlist
fixed the genre icons

To do
Too much empty space at the top.

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -46,8 +46,8 @@ header {
 /* Search bar */
 .search-box {
     position: absolute;
-    right: 20px;
-    top: 150px;
+    right: 200px;
+    top: 200px;
     display: flex;
 
 }
@@ -63,7 +63,7 @@ header {
 
 .search-box button {
     position: absolute;
-    right: 5px;
+    right: 90px;
     top: 50%;
     transform: translateY(-50%);
     background: transparent;
@@ -73,8 +73,8 @@ header {
 }
 
 .search-box button img {
-    width: 100px;
-    height: 100px;
+    width: 20px;
+    height: 20px;
 }
 
 
@@ -351,8 +351,8 @@ header {
 }
 
 .genre-icon img {
-    width: 60%;
-    height: 60%;
+    width: 30%;
+    height: 30%;
     object-fit: contain;
 }
 
@@ -397,3 +397,170 @@ header {
     border-radius: 5px;
 }
 
+/* Dropdown box */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown a {
+    color: white;
+    text-decoration: none;
+    margin: 0 15px;
+    font-size: 16px;
+    padding: 10px;
+}
+
+/* Dropdown Content */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #333;
+    min-width: 160px;
+    z-index: 1;
+}
+
+.dropdown-content form {
+    margin: 0;
+}
+
+.dropdown-content button {
+    color: white;
+    background-color: #333;
+    border: none;
+    text-align: left;
+    padding: 10px 20px;
+    text-decoration: none;
+    display: block;
+    width: 100%;
+    font-size: 16px;
+}
+
+.dropdown-content button:hover {
+    background-color: #575757;
+    text-decoration: underline;
+}
+
+/*dropdown on hover*/
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover a {
+    background-color: #444;
+}
+
+/* Basket Button */
+.basket-button-container {
+    position: relative;
+   
+}
+
+/* Basket Button */
+.basket-button {
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.basket-button img {
+    width: 40px;
+    height: 40px;
+   
+}
+
+
+/* Account Dropdown */
+.account-dropdown {
+    position: absolute;
+    left: 80px;
+    top: 240px; 
+    display: inline-block;
+}
+
+.account-button {
+    background-color: transparent;
+    color: #333;
+    padding: 10px 15px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center; 
+    text-decoration: none;
+}
+
+.account-button img {
+    width: 20px; 
+    height: 20px;
+    margin-left: 5px; 
+}
+
+.account-dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 120px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.account-dropdown-content form {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.account-dropdown-content button {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+    border: none;
+    background: none;
+    cursor: pointer;
+}
+
+.account-dropdown-content button:hover {
+    text-decoration: underline;
+}
+
+.account-dropdown:hover .account-dropdown-content {
+    display: block;
+}
+
+.dropdown-divider {
+    border-bottom: 1px solid #ccc;
+    margin: 5px 0;
+}
+
+/* Wishlist Button */
+.wishlist-button {
+    position: absolute;
+    left: 200px; 
+    top: 240px; 
+    display: inline-block;
+    color: #333;
+    padding: 10px 15px;
+    font-size: 16px;
+}
+
+.wishlist-button a {
+    display: flex;
+    align-items: center;
+    color: #333; 
+    text-decoration: none;
+}
+
+.wishlist-button img {
+    width: 20px; 
+    height: 20px;
+    margin-left: 5px; 
+}
